# AIChatBot

./: .gitignore  Makefile  README.md
.cursor/plans/: 智能数据分析系统模块规划_34b277f9.plan.md
.cursor/rules/: dev-flow.mdc
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py  sql_string.py
backend/app/api/: auth.py  chat.py  health.py  semantics.py  sessions.py
backend/app/core/: config.py  context.py  deps.py  logging.py  middleware.py  request_id.py  security.py
backend/app/db/: base.py  declarative.py
backend/app/db/models/: __init__.py  _mixins.py  chat.py  iam.py  rag.py
backend/app/graph/: __init__.py  builder.py  checkpointer.py  state.py
backend/app/graph/nodes/: __init__.py  chart.py  retrieve.py  sql_exec.py  sql_gen.py  sql_validate.py  summarize.py
backend/app/llm/: __init__.py  embedding.py  errors.py  qwen.py
backend/app/llm/prompts/: __init__.py  chart_recommend.j2  sql_gen.j2  summarize.j2
backend/app/semantic/: __init__.py  indexer.py  retriever.py  schema_loader.py
backend/app/services/: auth_service.py  chat_service.py  schema_provider.py  semantic_repo.py  semantic_service.py  session_repo.py  session_service.py  sql_safety_service.py  sse.py  user_repo.py
backend/app/sql_safety/: __init__.py  errors.py  schema_whitelist.py  tenant_guard.py  validator.py
backend/tests/: conftest.py  test_auth_api.py  test_chat_api.py  test_graph_builder.py  test_graph_checkpointer.py  test_graph_nodes.py  test_graph_state.py  test_health.py  test_indexer.py  test_llm_clients.py  test_llm_prompts.py  test_retriever.py  test_schema_loader.py  test_schema_provider.py  test_security.py  test_semantics_api.py  test_sessions_api.py  test_sql_gen_schema_merge.py  test_sql_safety_service.py  test_sql_string.py  test_sql_tenant_guard.py  test_sql_validator.py  test_sql_whitelist.py  test_sse.py
frontend/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.js  App.tsx  index.css  main.js  main.tsx
frontend/src/__tests__/: HealthCheck.test.tsx  RequireAuth.test.tsx  mockSse.test.ts  sessionStore.test.ts
frontend/src/api/: auth.ts  chat.ts  contracts.ts  health.js  health.ts  http.js  http.ts  mappers.ts  sessions.ts
frontend/src/components/: HealthBadge.js  HealthBadge.tsx  RequireAuth.tsx
frontend/src/components/Chart/: ChartPanel.tsx
frontend/src/components/Chat/: ChatArea.tsx  Composer.tsx  MessageBubble.tsx  MessageList.tsx  SqlBlock.tsx  ThinkingTrace.tsx
frontend/src/components/Sidebar/: SessionList.css  SessionList.tsx
frontend/src/config/: runtimeMode.ts
frontend/src/hooks/: useChatStream.ts
frontend/src/mocks/: seed.ts  sseServer.ts
frontend/src/pages/: HealthCheck.js  HealthCheck.tsx  Login.tsx  Workspace.tsx
frontend/src/store/: authStore.ts  chartStore.ts  chatStore.ts  sessionStore.ts
frontend/src/types/: chat.ts
frontend/src/utils/: sqlDedupe.ts
infra/: .env.example  podman-compose.yml
infra/postgres/: init-roles.sh  init.sql
scripts/: seed_demo_data.sql  smoke.sh
