[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aichatbot-backend"
version = "0.1.0"
description = "AIChatBot backend — FastAPI + LangGraph + PostgreSQL/pgvector"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Phase1 仅安装跑骨架所需的最小依赖；业务依赖（langgraph/sqlglot/openai 等）
# 留待 Phase3 增量安装，避免拖慢冷启动与构建时间。
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary,pool]>=3.2",
    "python-dotenv>=1.0",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
plugins = []
strict_optional = true
warn_unused_configs = true
ignore_missing_imports = true
