[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aichatbot-backend"
version = "0.1.0"
description = "AIChatBot backend — FastAPI + LangGraph + PostgreSQL/pgvector"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# 依赖分两层：
#   - Phase1：FastAPI 骨架 + 数据库驱动
#   - Phase3：鉴权 / 迁移 / 向量 / LLM / LangGraph / SQL 安全 / 工具
# 版本约束遵循 minor-pin（>=X.Y, <X+1.0），允许补丁不允许破坏性大版本升级。
dependencies = [
    # —— Phase1 ——
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary,pool]>=3.2",
    "python-dotenv>=1.0",
    "orjson>=3.10",

    # —— Phase3 鉴权与安全 ——
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",

    # —— Phase3 迁移与向量 ——
    "alembic>=1.14",
    "pgvector>=0.3.6",
    "asyncpg>=0.30",

    # —— Phase3 LLM（路径 A：百炼 OpenAI 兼容端点）——
    "openai>=2.26",
    "langchain>=1.2,<2.0",
    "langchain-core>=1.3.2,<2.0",
    "langchain-openai>=1.2,<2.0",
    "langchain-postgres>=0.0.17",
    "tiktoken>=0.8",

    # —— Phase3 LangGraph 工作流与持久化（probe 实测对齐）——
    "langgraph>=1.1,<2.0",
    "langgraph-checkpoint>=4.0,<5.0",
    "langgraph-checkpoint-postgres>=3.0,<4.0",

    # —— Phase3 SQL 安全 ——
    "sqlglot>=26.0",

    # —— Phase3 模板 / 工具 ——
    "jinja2>=3.1",
    "tenacity>=9.0",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    # —— Phase1 ——
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",

    # —— Phase3 测试 ——
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "respx>=0.22",
    "factory-boy>=3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
plugins = []
strict_optional = true
warn_unused_configs = true
ignore_missing_imports = true
